apps/portfolio-louis/portfolio-louis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-louis
  namespace: website
  labels:
    app.kubernetes.io/name: portfolio-louis
spec:
  selector:
    app.kubernetes.io/name: portfolio-louis
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
