apps/portfolio-louis/portfolio-louis-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-louis
  namespace: website
  labels:
    app.kubernetes.io/name: portfolio-louis
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`louis.loutik.fr`)
      kind: Rule
      services:
        - name: portfolio-louis
          port: 8080
